fix broken height when viewing on mobile

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -28,7 +28,8 @@ main
 {
     max-width: 90rem;
     width: 90%;
-    height: 50rem;
+    max-height: 50rem;
+    height: 90%;
     display: flex;
     flex-direction: column;
     border-style: solid;
@@ -42,7 +43,7 @@ main
     .page
     {
         width: 95%;
-        height: 95%;
+        height: 90%;
     }
 }
 
